# aoc-2021-cpp

./: CMakeLists.txt  main.cpp
BaseClasses/: defines.h  enums.h  puzzle.cpp  puzzle.h
Day1/puzzle1/: puzzle1.cpp  puzzle1.h
Day1/puzzle2/: puzzle2.cpp  puzzle2.h
Day2/puzzle1/: puzzle1.cpp  puzzle1.h
Day2/puzzle2/: puzzle2.cpp  puzzle2.h
Day3/puzzle1/: puzzle1.cpp  puzzle1.h
